maze.wallfollower.WallFollowerMaze.scala.error
Compilation error:
WallFollowerMaze:31: error: Boolean.type does not take parameters
{
^